# anatomy-rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SETUP.md  docker-compose.gpu.yml  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/scripts/: bench_stage_b.py  bench_stage_b_concurrency.py
backend/src/anatomy_backend/: config.py
backend/src/anatomy_backend/api/: ai_stream.py  auth.py  chat.py  citations.py  feedback.py  main.py  ratelimit.py  schemas.py
backend/src/anatomy_backend/cache/: __init__.py  base.py  semantic_cache.py
backend/src/anatomy_backend/db/: kb_version.py  pool.py  tx_helpers.py
backend/src/anatomy_backend/db/migrations/: env.py
backend/src/anatomy_backend/db/migrations/versions/: 001_extensions.py  002_books.py  003_pages.py  004_page_patches.py  005_query_logs.py  006_indexes.py  007_ingest_errors.py  008_query_logs_turn_id.py
backend/src/anatomy_backend/encoder/: __init__.py  client.py
backend/src/anatomy_backend/llm/: __init__.py  client.py  fallback.py  image_routing.py  mock.py  prompts.py
backend/src/anatomy_backend/observability/: __init__.py  alerts.py  errors.py  tracing.py
backend/src/anatomy_backend/retrieval/: __init__.py  bm25.py  engine.py  engine_selfbuilt.py  orchestrator.py  query_repr.py  rrf.py  stage_a.py  stage_b.py  types.py
backend/tests/: conftest.py  test_api_ai_stream_unit.py  test_api_auth_unit.py  test_api_cache_seam_unit.py  test_api_chat_sse_unit.py  test_api_chat_unit.py  test_api_citations_unit.py  test_api_encoder_client_unit.py  test_api_feedback_db.py  test_api_feedback_unit.py  test_api_main_wiring_unit.py  test_api_ratelimit_unit.py  test_api_schemas_unit.py  test_api_semantic_cache_integration.py  test_api_semantic_cache_unit.py  test_bm25_db.py  test_config.py  test_engine_selfbuilt_db.py  test_healthz.py  test_kb_version_unit.py  test_llm_client_unit.py  test_llm_factory_unit.py  test_llm_fallback_unit.py  test_llm_image_routing_unit.py  test_llm_messages_unit.py  test_llm_mock_unit.py  test_llm_no_live_openai_unit.py  test_llm_prompts_unit.py  test_migrations_db.py  test_observability_alerts_unit.py  test_observability_errors_unit.py  test_observability_tracing_unit.py  test_orchestrator_db.py  test_pool_db.py  test_pool_unit.py  test_query_repr_unit.py  test_recall_gate_db.py  test_retrieval_types_unit.py  test_rrf_unit.py  test_schema_db.py  (+3 more)
colpali_service/: Dockerfile  Dockerfile.cpu  pyproject.toml
colpali_service/scripts/: encoder_gate.py
colpali_service/src/colpali_service/: encoder.py  glossary_zh_en.tsv  main.py  real_encoder.py  translate.py
colpali_service/tests/: test_encode.py  test_marian_mt.py  test_real_encoder_unit.py  test_real_runtime_gpu.py  test_service_readiness.py  test_translate_unit.py
docs/: ARCHITECTURE.md  decisions.md  golden-contribution-guide.md
docs/superpowers/plans/: 2026-06-07-anatomy-rag-roadmap.md  2026-06-07-phase-0-env-and-skeleton.md  2026-06-10-phase-1-shared-binary-and-harness.md  2026-06-11-phase-2-db-layer-and-migrations.md  2026-06-12-phase-3-encoder-service.md  2026-06-13-anatomy-rag-phase-6-llm.md  2026-06-13-anatomy-rag-phase-8-api-sse.md  2026-06-13-phase-4-ingest-pipeline.md  2026-06-13-phase-5-retrieval-engine.md  2026-06-14-phase-10-frontend.md  2026-06-14-phase-11-eval.md  2026-06-14-phase-7-semantic-cache.md  2026-06-14-phase-9-observability.md
docs/superpowers/specs/: 2026-06-14-phase-10-frontend-design.md
eval/: eval_thresholds.yaml  pyproject.toml
eval/data/: encoder_gate_pages.jsonl  encoder_gate_queries.jsonl
eval/src/anatomy_eval/: _ragas_compat.py  gate.py  golden.py  harness.py  kappa.py  ragas_cli.py  ragas_metrics.py  ragas_runner.py  recall_by_class.py  reference.py  regression.py  retention.py  review_loader.py  review_tool.py
eval/tests/: _ragas_fakes.py  conftest.py  test_gate.py  test_golden_schema.py  test_kappa.py  test_ragas_cli.py  test_ragas_metrics.py  test_ragas_runner.py  test_recall_gate.py  test_recall_harness.py  test_reference_maxsim.py  test_regression.py  test_retention.py  test_review_loader.py
frontend/: .dockerignore  Dockerfile  components.json  next.config.mjs  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/__tests__/: chat.route.test.ts  feedback.route.test.ts  warmup.route.test.ts
frontend/app/chat/: route.ts
frontend/app/feedback/: route.ts
frontend/app/warmup/: route.ts
frontend/components/: ChatPanel.tsx  CitationCard.tsx  CitationImage.tsx  CitationPanel.tsx  Composer.tsx  DisclaimerModal.tsx  EmptyState.tsx  ErrorState.tsx  FeedbackButtons.tsx  Header.tsx  MessageBubble.tsx  MessageList.tsx  UnverifiedBanner.tsx  Watermark.tsx  theme-provider.tsx
frontend/components/__tests__/: ChatPanel.integration.test.tsx  CitationCard.test.tsx  CitationImage.test.tsx  CitationPanel.test.tsx  Composer.test.tsx  DisclaimerModal.test.tsx  EmptyState.test.tsx  ErrorState.test.tsx  FeedbackButtons.test.tsx  (+5 more)
frontend/lib/: api.ts  conversation.ts  disclaimer.ts  transport.ts  types.ts  useStickToBottom.ts
frontend/scripts/: dump-golden-stream.mjs
infra/golden/: ai_stream_golden.jsonl  ai_stream_wire_sample.json
infra/postgres/: init.sql
ingest/: pyproject.toml
ingest/scripts/: ingest_gate.py  sample_book.yaml
ingest/src/anatomy_ingest/: classify.py  cli.py  colpali_encoder.py  config.py  docling_parser.py  page_render.py  source.py  storage.py  types.py  writer.py
ingest/tests/: conftest.py  test_classify.py  test_cli.py  test_colpali_encoder.py  test_config.py  test_docling_parser.py  test_no_cloud_llm.py  test_page_render.py  test_source.py  test_storage.py  test_types.py  test_writer_db.py
shared/: pyproject.toml
shared/src/anatomy_shared/: binary.py  colpali_real.py  colpali_runtime.py
shared/tests/: test_binary.py  test_colpali_runtime.py  test_loading_guard.py
tests/: golden_qa.seed.jsonl
(+7 files in other folders)
