[project]
name = "anatomy-rag"
version = "0.0.0"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["shared", "backend", "colpali_service", "ingest", "eval"]

[tool.uv.sources]
anatomy-shared = { workspace = true }

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "asgi-lifespan>=2.1", "httpx>=0.27"]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# 預設 prepend 模式 + 測試目錄無 __init__.py + 測試檔名全域唯一：
# 只把各測試檔所在目錄加入 sys.path（不加 repo 根），故無同名 tests 套件衝突、
# 也不會讓頂層 colpali_service/ 目錄遮蔽 editable 安裝的 colpali_service 套件。
# 新增測試檔時 MUST 維持「全域唯一檔名」（如 test_stage_a.py 而非泛用 test_main.py）。
addopts = "-q"
