[project]
name = "anatomy-backend"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "anatomy-shared",
  "fastapi>=0.115", "uvicorn[standard]>=0.34", "sse-starlette>=2.1",
  "asyncpg>=0.30", "alembic>=1.13", "pydantic>=2.7", "pydantic-settings>=2.3",
  "redis>=5.0", "redisvl>=0.18",
  "openai>=1.40",
  "numpy>=1.26",
  "tenacity>=8.3", "httpx>=0.27",
  # 語意快取的本地 embedding 依賴留待實作快取模組時再加（屆時 decisions.md 決定
  # sentence-transformers(torch) vs fastembed(ONNX，較輕)）；Phase 0 不引入以保持 backend torch-free。
  "langfuse>=2.0", "sentry-sdk>=2.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/anatomy_backend"]
