[project]
name = "anatomy-eval"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["ragas>=0.4,<0.5",
                "langchain-openai>=0.1", "datasets>=2.19", "pyyaml>=6", "streamlit>=1.35"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/anatomy_eval"]
