[project]
name = "anatomy-eval"
version = "0.0.0"
requires-python = ">=3.11"
# 基底保持輕量（recall harness 進 CI unit job 用）；RAGAS/抽檢工具為 Phase 11 extras。
dependencies = ["anatomy-shared", "numpy>=1.26", "pyyaml>=6"]

[project.optional-dependencies]
ragas = ["ragas>=0.4,<0.5", "langchain-openai>=0.1", "datasets>=2.19"]
review = ["streamlit>=1.35"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/anatomy_eval"]
