[project]
name = "anatomy-ingest"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["anatomy-shared[colpali]", "docling>=2.40",
                "pdf2image>=1.17", "asyncpg>=0.30", "boto3>=1.34", "pyyaml>=6", "pillow>=10"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/anatomy_ingest"]
