[project]
name = "anatomy-shared"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
colpali = [
  "torch>=2.6",
  "transformers>=4.53.1",
  "pillow>=10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/anatomy_shared"]
