[project]
name = "anatomy-shared"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
colpali = [
  "torch>=2.6",
  "transformers>=5,<6",   # 4.52–4.53 對 colpali-v1.3-hf 有 uninitialized-weights 已知破損；v5 為官方維護路徑
  "pillow>=10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/anatomy_shared"]
